syntax = "proto3";

//Package name
option go_package = "github.com/jetsadawwts/go-microservices";

//Structures
message IsAvailableToSellReq {
    string userId = 1;
    string productId = 2;
}

message IsAvailableToSellRes {
    bool isAvailable = 1;
}

//Method
service InventoryGrpcService {
    rpc IsAvailableToSell(IsAvailableToSellReq) returns (IsAvailableToSellRes);
}
