syntax = "proto3";

//Package name
option go_package = "github.com/jetsadawwts/go-microservices";

//Structures
message UserProfile {
    string id = 1;
    string email = 2;
    string username = 3;
    int32 roleCode = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message CredentialSearchReq {
    string email = 1;
    string password = 2;
}

message FindOneUserProfileToRefreshReq {
    string userId = 1;
}

message GetUserSavingAccountReq {
    string userId = 1;
}

message GetUserSavingAccountRes {
    string userId = 1;
    double balance = 2;
}

//Methods
service UserGrpcService {
    rpc CredentialSearch(CredentialSearchReq) returns (UserProfile);
    rpc FindOneUserProfileToRefresh(FindOneUserProfileToRefreshReq) returns (UserProfile);
    rpc GetUserSavingAccount(GetUserSavingAccountReq) returns (GetUserSavingAccountRes);

}